objects/SaveOrder__c.object
<CustomObject><fields>
        <fullName>ActionStepOrder__c</fullName>
        <label>ActionStepOrder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>BenchMarkOrder__c</fullName>
        <label>BenchMarkOrder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ChallangeOrder__c</fullName>
        <label>ChallengesOrder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>SaveOrder</label><nameField>
        <label>UserID</label>
        <type>Text</type>
    </nameField><pluralLabel>SaveOrder</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActionStepOrder__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>BenchMarkOrder__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>